# opencomputer_web_control

./: CMakeLists.txt  codes.lua  main.lua  protocol.md
common/: chests.lua  connexion.lua  crafting.lua  energy.lua  environement.lua  inventory.lua  movement.lua  net.lua  utilities.lua
requests/: system.lua
web/: .gitignore  All External  TODOs  index.js  package-lock.json  package-lock.json~  package.json
web/ejs/: error.ejs
web/renderers/dashboard/: config.json
web/renderers/dashboard/logged_in/: config.json  system.js
web/renderers/dashboard/logged_in/config/: socketio.js  sockets.js
web/renderers/dashboard/logged_in/ejs/: template.ejs
web/renderers/dashboard/logged_in/routes/: admin.js  general.js  index.js
web/renderers/dashboard/logged_in/sass/: remodal-default-theme.scss  remodal.scss
web/renderers/dashboard/logged_out/: config.json
web/renderers/dashboard/logged_out/ejs/: template.ejs
web/renderers/dashboard/logged_out/routes/: index.js  login.js  register.js
web/renderers/dashboard/main/: config.json
web/renderers/dashboard/main/routes/: index.js
web/renderers/demo/: config.json
web/renderers/demo/main/ejs/: template.ejs
web/server/: index.js
web/server/config/: index.js
web/server/config/modules/: axios.js  express.js  express_middlewares.js  mysql.js  security.js  socketio.js
web/server/config/utilities/: functions.js  logging.js  sidemenu.js  system.js
web/server/routes/: index.js
web/sql/: example.sql
web/system/: command.js  config.js  debug.js  index.js  secret_config.js~  secret_config_EXAMPLE.js
(+54 files in other folders)
